Deeplearning recommender systems

--- a/notebooks/MF_keras.ipynb
+++ b/notebooks/MF_keras.ipynb
@@ -491,7 +491,7 @@
     "- `output_dim`: The hidden/latent dimensionality for dense representation.\n",
     "- `input_length`: This refers to the sequence length that is often used in NLP for n-grams. For recommenders MF, this remains as 1 since the data used does not have sequences.\n",
     "\n",
-    "Ignoring the effect of `input_length` since it is 1, what the Embedding layer does is that it constructs a reduced representation of the work as represented by `input_dim` by `output_dim` which is similar to the U or M matrices in MF. Thus, for a given user or item, it is represented by a vector of shape (1 by `hidden_dimension`) in dense representation. Using"
+    "Ignoring the effect of `input_length` since it is 1, what the Embedding layer does is that it constructs a reduced representation of the work as represented by `input_dim` by `output_dim` which is similar to the U or M matrices in MF. Thus, for a given user or item, it is represented by a vector of shape (1 by `hidden_dimension`) in dense representation."
    ]
   },
   {
@@ -621,7 +621,7 @@
     "u_bias = Embedding(input_dim = N, output_dim = 1, embeddings_regularizer=l2(reg))(u) # (Batch_size, 1, 1)\n",
     "m_bias = Embedding(input_dim = M, output_dim = 1, embeddings_regularizer=l2(reg))(m) # (Batch_size, 1, 1)\n",
     "\n",
-    "# x = rating (dot product between user embedding and item embedding)\n",
+    "# ratings (dot product between user embedding and item embedding)\n",
     "# \"axes\" input is to specify the axis for performing the dot product operation\n",
     "ratings = Dot(axes=2)([u_embedding, m_embedding]) # (Batch_size, 1, 1)\n",
     "\n",
@@ -815,7 +815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As shown by the final MSE metric, the loss for the training and test data have very similar loss quantum hovering around 0.880. This shows that the model with a latent dimensionality of K = 20 has manged to capture the data pre"
+    "As shown by the final MSE metric, the loss for the training and test data have very similar loss quantum hovering around 0.880. This shows that the model with a latent dimensionality of K = 20 has managed to generalise well."
    ]
   }
  ],
